Add insecure ssl support to connect to kapacitor
