# server/kapacitors.go
@@ -12,11 +12,12 @@ import (
 )
 
 type postKapacitorRequest struct {
-	Name     *string `json:"name"`               // User facing name of kapacitor instance.; Required: true
-	URL      *string `json:"url"`                // URL for the kapacitor backend (e.g. http://localhost:9092);/ Required: true
-	Username string  `json:"username,omitempty"` // Username for authentication to kapacitor
-	Password string  `json:"password,omitempty"`
-	Active   bool    `json:"active"`
+	Name               *string `json:"name"`               // User facing name of kapacitor instance.; Required: true
+	URL                *string `json:"url"`                // URL for the kapacitor backend (e.g. http://localhost:9092);/ Required: true
+	Username           string  `json:"username,omitempty"` // Username for authentication to kapacitor
+	Password           string  `json:"password,omitempty"`
+	InsecureSkipVerify bool    `json:"insecureSkipVerify,omitempty"` // InsecureSkipVerify as true means any certificate presented by the kapacitor is accepted.
+	Active             bool    `json:"active"`
 }
 
 func (p *postKapacitorRequest) Valid() error {
@@ -44,13 +45,14 @@ type kapaLinks struct {
 }
 
 type kapacitor struct {
-	ID       int       `json:"id,string"`          // Unique identifier representing a kapacitor instance.
-	Name     string    `json:"name"`               // User facing name of kapacitor instance.
-	URL      string    `json:"url"`                // URL for the kapacitor backend (e.g. http://localhost:9092)
-	Username string    `json:"username,omitempty"` // Username for authentication to kapacitor
-	Password string    `json:"password,omitempty"`
-	Active   bool      `json:"active"`
-	Links    kapaLinks `json:"links"` // Links are URI locations related to kapacitor
+	ID                 int       `json:"id,string"`          // Unique identifier representing a kapacitor instance.
+	Name               string    `json:"name"`               // User facing name of kapacitor instance.
+	URL                string    `json:"url"`                // URL for the kapacitor backend (e.g. http://localhost:9092)
+	Username           string    `json:"username,omitempty"` // Username for authentication to kapacitor
+	Password           string    `json:"password,omitempty"`
+	InsecureSkipVerify bool      `json:"insecureSkipVerify,omitempty"` // InsecureSkipVerify as true means any certificate presented by the kapacitor is accepted.
+	Active             bool      `json:"active"`
+	Links              kapaLinks `json:"links"` // Links are URI locations related to kapacitor
 }
 
 // NewKapacitor adds valid kapacitor store store.
@@ -79,12 +81,13 @@ func (h *Service) NewKapacitor(w http.ResponseWriter, r *http.Request) {
 	}
 
 	srv := chronograf.Server{
-		SrcID:    srcID,
-		Name:     *req.Name,
-		Username: req.Username,
-		Password: req.Password,
-		URL:      *req.URL,
-		Active:   req.Active,
+		SrcID:              srcID,
+		Name:               *req.Name,
+		Username:           req.Username,
+		Password:           req.Password,
+		InsecureSkipVerify: req.InsecureSkipVerify,
+		URL:                *req.URL,
+		Active:             req.Active,
 	}
 
 	if srv, err = h.ServersStore.Add(ctx, srv); err != nil {
@@ -101,11 +104,12 @@ func (h *Service) NewKapacitor(w http.ResponseWriter, r *http.Request) {
 func newKapacitor(srv chronograf.Server) kapacitor {
 	httpAPISrcs := "/chronograf/v1/sources"
 	return kapacitor{
-		ID:       srv.ID,
-		Name:     srv.Name,
-		Username: srv.Username,
-		URL:      srv.URL,
-		Active:   srv.Active,
+		ID:                 srv.ID,
+		Name:               srv.Name,
+		Username:           srv.Username,
+		URL:                srv.URL,
+		Active:             srv.Active,
+		InsecureSkipVerify: srv.InsecureSkipVerify,
 		Links: kapaLinks{
 			Self:  fmt.Sprintf("%s/%d/kapacitors/%d", httpAPISrcs, srv.SrcID, srv.ID),
 			Proxy: fmt.Sprintf("%s/%d/kapacitors/%d/proxy", httpAPISrcs, srv.SrcID, srv.ID),
@@ -204,11 +208,12 @@ func (h *Service) RemoveKapacitor(w http.ResponseWriter, r *http.Request) {
 }
 
 type patchKapacitorRequest struct {
-	Name     *string `json:"name,omitempty"`     // User facing name of kapacitor instance.
-	URL      *string `json:"url,omitempty"`      // URL for the kapacitor
-	Username *string `json:"username,omitempty"` // Username for kapacitor auth
-	Password *string `json:"password,omitempty"`
-	Active   *bool   `json:"active"`
+	Name               *string `json:"name,omitempty"`     // User facing name of kapacitor instance.
+	URL                *string `json:"url,omitempty"`      // URL for the kapacitor
+	Username           *string `json:"username,omitempty"` // Username for kapacitor auth
+	Password           *string `json:"password,omitempty"`
+	InsecureSkipVerify *bool   `json:"insecureSkipVerify,omitempty"` // InsecureSkipVerify as true means any certificate presented by the kapacitor is accepted.
+	Active             *bool   `json:"active"`
 }
 
 func (p *patchKapacitorRequest) Valid() error {
@@ -268,6 +273,9 @@ func (h *Service) UpdateKapacitor(w http.ResponseWriter, r *http.Request) {
 	if req.Username != nil {
 		srv.Username = *req.Username
 	}
+	if req.InsecureSkipVerify != nil {
+		srv.InsecureSkipVerify = *req.InsecureSkipVerify
+	}
 	if req.Active != nil {
 		srv.Active = *req.Active
 	}
@@ -303,7 +311,7 @@ func (h *Service) KapacitorRulesPost(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	c := kapa.NewClient(srv.URL, srv.Username, srv.Password)
+	c := kapa.NewClient(srv.URL, srv.Username, srv.Password, srv.InsecureSkipVerify)
 
 	var req chronograf.AlertRule
 	if err = json.NewDecoder(r.Body).Decode(&req); err != nil {
@@ -440,7 +448,7 @@ func (h *Service) KapacitorRulesPut(w http.ResponseWriter, r *http.Request) {
 	}
 
 	tid := httprouter.GetParamFromContext(ctx, "tid")
-	c := kapa.NewClient(srv.URL, srv.Username, srv.Password)
+	c := kapa.NewClient(srv.URL, srv.Username, srv.Password, srv.InsecureSkipVerify)
 	var req chronograf.AlertRule
 	if err = json.NewDecoder(r.Body).Decode(&req); err != nil {
 		invalidJSON(w, h.Logger)
@@ -510,7 +518,7 @@ func (h *Service) KapacitorRulesStatus(w http.ResponseWriter, r *http.Request) {
 	}
 
 	tid := httprouter.GetParamFromContext(ctx, "tid")
-	c := kapa.NewClient(srv.URL, srv.Username, srv.Password)
+	c := kapa.NewClient(srv.URL, srv.Username, srv.Password, srv.InsecureSkipVerify)
 
 	var req KapacitorStatus
 	if err = json.NewDecoder(r.Body).Decode(&req); err != nil {
@@ -570,7 +578,7 @@ func (h *Service) KapacitorRulesGet(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	c := kapa.NewClient(srv.URL, srv.Username, srv.Password)
+	c := kapa.NewClient(srv.URL, srv.Username, srv.Password, srv.InsecureSkipVerify)
 	tasks, err := c.All(ctx)
 	if err != nil {
 		Error(w, http.StatusInternalServerError, err.Error(), h.Logger)
@@ -613,7 +621,7 @@ func (h *Service) KapacitorRulesID(w http.ResponseWriter, r *http.Request) {
 	}
 	tid := httprouter.GetParamFromContext(ctx, "tid")
 
-	c := kapa.NewClient(srv.URL, srv.Username, srv.Password)
+	c := kapa.NewClient(srv.URL, srv.Username, srv.Password, srv.InsecureSkipVerify)
 
 	// Check if the rule exists within scope
 	task, err := c.Get(ctx, tid)
@@ -651,7 +659,7 @@ func (h *Service) KapacitorRulesDelete(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	c := kapa.NewClient(srv.URL, srv.Username, srv.Password)
+	c := kapa.NewClient(srv.URL, srv.Username, srv.Password, srv.InsecureSkipVerify)
 
 	tid := httprouter.GetParamFromContext(ctx, "tid")
 	// Check if the rule is linked to this server and kapacitor
